src/ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nginx-ingress-microk8s
  name: nginx-ingress-microk8s
  namespace: ingress
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    name: nginx-ingress-microk8s
  # Lets use the (MetalLb) LoadBalancer instead of NodePort (the other option)
  type: LoadBalancer
  # This is an ip that has to be in the portrange of the metallb configuration
  # as configured in the prerequisites (e.g. 192.168.1.200-192.168.1.220)
  # If omitted metallb will pick a random ip from that range
  loadBalancerIP: 192.168.1.200
